Fix gutters on small breakpoints

--- a/site/themes/skouf/src/scss/modules/_single.scss
+++ b/site/themes/skouf/src/scss/modules/_single.scss
@@ -3,7 +3,11 @@
 .post,
 .post-aside,
 .post-nav {
-  padding: 0 5%;
+  padding: 0 7.5%;
+
+  @include respond-to(tablet) {
+    padding: 0 5%;
+  }
 }
 
 .post {
